--- a/src/main/webapp/resources/pharmacy/grn.xhtml
+++ b/src/main/webapp/resources/pharmacy/grn.xhtml
@@ -95,6 +95,12 @@
                         </f:facet>
                         <h:outputLabel value="#{bip.item.name}"/>
                     </p:column>
+                    <p:column style="text-align: left!important;"  >
+                        <f:facet name="header">
+                            <h:outputLabel value="Code" style="font-weight: bold!important; " />
+                        </f:facet>
+                        <h:outputLabel value="#{bip.item.code}"/>
+                    </p:column>
                     <p:column style="width: 8px;text-align: right!important;" >
                         <f:facet name="header">
                             <h:outputLabel value="Expiry" style="font-weight: bold!important;" />
