Signed-off-by: Buddhika <buddhika.ari@gmail.com>

--- a/src/main/webapp/resources/bill/posOpdBill.xhtml
+++ b/src/main/webapp/resources/bill/posOpdBill.xhtml
@@ -19,7 +19,7 @@
         <h:outputStylesheet library="css" name="pharmacypos.css" ></h:outputStylesheet>
         <div class="posbillBreak">
 
-            <h:graphicImage library="image" name="prabdhodha-logo.jpg" style="width: 7cm; margin: auto; " ></h:graphicImage>
+            <h:graphicImage library="image" name="#{sessionController.institutionPreference.logoName}" style="width: 7cm; margin: auto; " ></h:graphicImage>
 
             <div class="institutionName" style="text-align: center!important;
                  font-weight: bold!important;
