--- a/src/main/webapp/pharmacy/pharmacy_purhcase_order_approving.xhtml
+++ b/src/main/webapp/pharmacy/pharmacy_purhcase_order_approving.xhtml
@@ -40,32 +40,36 @@
                             <p:commandButton ajax="false" value="Remove All" action="#{purchaseOrderController.removeSelected()}"/>                            
                         </f:facet>  
 
-                        <p:column selectionMode="multiple" width="10"></p:column>
+                        <p:column selectionMode="multiple" style="width: 30px;"></p:column>
 
 
-                        <p:column headerText="No" width="10" >
+                        <p:column headerText="No" style="width: 50px;" >
                             <p:outputLabel value="#{bi.searialNo + 1}" ></p:outputLabel>
                         </p:column>
 
                         <p:column headerText="Item Name" >  
                             #{bi.item.name} 
                         </p:column>  
+                        
+                        <p:column headerText="Code" styleClass="shortNumericColumn"  >  
+                            #{bi.item.code} 
+                        </p:column>  
 
-                        <p:column headerText="Qty" >                         
+                        <p:column headerText="Qty" styleClass="averageNumericColumn" >                         
                             <p:inputText autocomplete="off" id="qty" value="#{bi.tmpQty}" style="width:100%" label="Qty">
                                 <f:convertNumber pattern="#00.00"/>
                                 <f:ajax event="blur" render="total :#{p:component('tot')}"  execute="@this price" listener="#{purchaseOrderController.onEdit(bi)}" ></f:ajax>
                                 <f:ajax event="focus" render=":#{p:component('tab')}" listener="#{purchaseOrderController.onFocus(bi)}" />
                             </p:inputText>
                         </p:column>  
-                        <p:column headerText="Free Qty">                         
+                        <p:column headerText="Free Qty" styleClass="averageNumericColumn" >                         
                             <p:inputText autocomplete="off" id="freeQty" value="#{bi.pharmaceuticalBillItem.freeQty}" style="width:100%">
                                 <f:convertNumber pattern="#00.00"/>
                                 <f:ajax event="blur" render="total :#{p:component('tot')}"  execute="@this price" listener="#{purchaseOrderController.onEdit(bi)}" ></f:ajax>
                                 <f:ajax event="focus" render=":#{p:component('tab')}" listener="#{purchaseOrderController.onFocus(bi)}" />
                             </p:inputText>
                         </p:column> 
-                        <p:column headerText="Purchse Price"  >  
+                        <p:column headerText="Purchse Price"  styleClass="averageNumericColumn" >  
                             <h:panelGroup id="price">
                                 <p:inputText autocomplete="off" value="#{bi.pharmaceuticalBillItem.purchaseRate}">   
                                     <f:convertNumber pattern="#00.00"/>
@@ -76,7 +80,7 @@
                         </p:column>  
 
 
-                        <p:column headerText="Last Sale Price" style="text-align: right;">  
+                        <p:column headerText="Last Sale Price" style="text-align: right;" styleClass="averageNumericColumn" >  
                             <h:panelGroup >
                                 <h:outputText value="#{bi.pharmaceuticalBillItem.retailRate}">
                                     <f:convertNumber pattern="#00.00"/>
@@ -84,7 +88,7 @@
                             </h:panelGroup>
                         </p:column>  
 
-                        <p:column headerText="Total" style="text-align: right;">  
+                        <p:column headerText="Total" style="text-align: right;" styleClass="averageNumericColumn" >  
                             <h:panelGroup id="total">
                                 <h:outputText value="#{bi.pharmaceuticalBillItem.purchaseRate*bi.pharmaceuticalBillItem.qty}" >
                                     <f:convertNumber pattern="#,##0.00"/>
@@ -92,7 +96,7 @@
                             </h:panelGroup>
                         </p:column>  
 
-                        <p:column >
+                        <p:column styleClass="averageNumericColumn" >
                             <p:commandButton value="Remove" ajax="false" action="#{purchaseOrderController.removeItem(bi)}"/>
                         </p:column>
                     </p:dataTable>  
