--- a/src/main/webapp/store/report_fixed_asset_addition_form.xhtml
+++ b/src/main/webapp/store/report_fixed_asset_addition_form.xhtml
@@ -20,6 +20,8 @@
                             <p:commandButton value="Print" ajax="false" >
                                 <p:printer target="panelForm" ></p:printer>
                             </p:commandButton>
+                            <p:commandButton value="Go To Asset Registry" ajax="false" action="/store/store_asset_registry" >
+                            </p:commandButton>
                         </f:facet>
 
                         <p:panel id="panelForm" >
@@ -53,7 +55,7 @@
                                 <p:spacer width="10" ></p:spacer>
                                 <p:outputLabel value=":" ></p:outputLabel>
                                 <p:spacer width="10" ></p:spacer>
-                                <p:outputLabel value="#{storeReportsStock.selectedInventoryStock.itemBatch.item}" ></p:outputLabel>
+                                <p:outputLabel value="#{storeReportsStock.selectedInventoryStock.itemBatch.item.name}" ></p:outputLabel>
 
 
                                 <p:outputLabel value="Department" ></p:outputLabel>
@@ -153,7 +155,12 @@
                                 <p:outputLabel value=":" ></p:outputLabel>
                                 <p:spacer width="10" ></p:spacer>
                                 <p:outputLabel value="#{storeReportsStock.selectedInventoryStock.itemBatch.colour}" ></p:outputLabel>
-
+                                
+                                <p:outputLabel value="Manufacturer" ></p:outputLabel>
+                                <p:spacer width="10" ></p:spacer>
+                                <p:outputLabel value=":" ></p:outputLabel>
+                                <p:spacer width="10" ></p:spacer>
+                                <p:outputLabel value="#{storeReportsStock.selectedInventoryStock.itemBatch.manufacturer.name}" ></p:outputLabel>
 
                                 <p:outputLabel value="Number of Accessories" ></p:outputLabel>
                                 <p:spacer width="10" ></p:spacer>
@@ -231,11 +238,7 @@
 
                             <h:panelGrid columns="5"  >
 
-                                <p:outputLabel value="Manufacturer" ></p:outputLabel>
-                                <p:spacer width="10" ></p:spacer>
-                                <p:outputLabel value=":" ></p:outputLabel>
-                                <p:spacer width="10" ></p:spacer>
-                                <p:outputLabel value="#{storeReportsStock.selectedInventoryStock.itemBatch.manufacturer.name}" ></p:outputLabel>
+                                
 
                                 <p:outputLabel value="Supplier Name" ></p:outputLabel>
                                 <p:spacer width="10" ></p:spacer>
