Signed-off-by: lahirumadushanka <lahirumadushanka2100@gmail.com>

--- a/src/main/webapp/lab/lab_agent_referece_book.xhtml
+++ b/src/main/webapp/lab/lab_agent_referece_book.xhtml
@@ -30,7 +30,7 @@
                     <p:outputLabel value="Ending Reference Number" />
                     <pe:inputNumber value="#{agentReferenceBookController.agentReferenceBook.endingReferenceNumber}" decimalPlaces="0" />
                     
-                    <p:commandButton action="#{agentReferenceBookController.saveChannelBook}" value="Save" ajax="false" ></p:commandButton> 
+                    <p:commandButton action="#{agentReferenceBookController.saveLabBook}" value="Save" ajax="false" ></p:commandButton> 
                     <p:commandButton action="#{agentReferenceBookController.makeNull}" value="Clear" ajax="false" ></p:commandButton> 
 
                 </p:panelGrid>
