Theater Report Signed-off-by: HNDITDushan <s.t.dushan@gmail.com>

--- a/src/main/webapp/pharmacy/pharmacy_summery_index.xhtml
+++ b/src/main/webapp/pharmacy/pharmacy_summery_index.xhtml
@@ -164,6 +164,8 @@
                                 <p:panel header="9) Transfer Report" style="width: 400px;margin:auto;" collapsed="true" toggleable="true"   >
                                     <p:commandButton styleClass="linkButton" ajax="false" style="text-align: left"
                                                      value="1) Transfer Issue Summary Report By Date" action="pharmacy_report_issue_by_date_summery.xhtml" actionListener="#{pharmacySaleReport.makeNull}"/>
+                                    <p:commandButton styleClass="linkButton" ajax="false" style="text-align: left"
+                                                     value="2) Transfer Recive Vs BHT Issue Quntity Totals By Item" action="/pharmacy/pharmacy_report_transfer_receive_item_count_bht_issue_count" />
                                 </p:panel>
                                 <p:panel header="12)Pharmacy Return Without Traising" style="width: 400px;margin:auto;" collapsed="true" toggleable="true"   >
                                     <p:commandButton styleClass="linkButton" ajax="false" style="text-align: left"
