--- a/src/main/webapp/hr/hr_staff_leave_entitle.xhtml
+++ b/src/main/webapp/hr/hr_staff_leave_entitle.xhtml
@@ -163,6 +163,15 @@
                                     <f:convertDateTime pattern="dd/MM/yyyy HH:mm:ss"/>
                                 </h:outputLabel>
                             </p:column>
+                            
+                            <p:column headerText="Create Date">
+                                <f:facet name="header">
+                                    <h:outputLabel value="Create Date"  />
+                                </f:facet>
+                                <h:outputLabel value="#{add.createdAt}">
+                                    <f:convertDateTime pattern="dd/MM/yyyy HH:mm:ss"/>
+                                </h:outputLabel>
+                            </p:column>
 
                             <p:column headerText="Staff">
                                 <f:facet name="header">
@@ -205,6 +214,12 @@
                                 </f:facet>
                                 <p:outputLabel value="#{add.staff.person.nameWithTitle}" ></p:outputLabel>
                             </p:column>
+                            <p:column headerText="Creater">
+                                <f:facet name="header">
+                                    <h:outputLabel value="Creater"  />
+                                </f:facet>
+                                <p:outputLabel value="#{add.creater.webUserPerson.name}"></p:outputLabel>
+                            </p:column> 
                         </p:dataTable>
                     </p:panel>   
                 </p:panel>
