Signed-off-by: lahirumadushanka <lahirumadushanka2100@gmail.com>

--- a/src/main/webapp/lab/lab_agent_referece_book.xhtml
+++ b/src/main/webapp/lab/lab_agent_referece_book.xhtml
@@ -18,7 +18,7 @@
                     <p:outputLabel value="Agent Name" />
                     <p:autoComplete converter="deal" value="#{agentReferenceBookController.agentReferenceBook.institution}" 
                                     forceSelection="true"
-                                    completeMethod="#{agencyController.completeAgency}" 
+                                    completeMethod="#{institutionController.completeCollectingCenter}" 
                                     var="vt" itemLabel="#{vt.name}" itemValue="#{vt}" >
                         <p:column>#{vt.institutionCode}</p:column>
                         <p:column>#{vt.name}</p:column>
