--- a/src/main/webapp/patient.xhtml
+++ b/src/main/webapp/patient.xhtml
@@ -55,12 +55,34 @@
                         <p:inputMask mask="999-9999999" id="txtNewPtPhone" autocomplete="off" maxlength="11" value="#{patientController.current.person.phone}">
                         </p:inputMask>
                         <h:outputLabel value="Date of Birth"/>
-                        <p:calendar  value="#{patientController.current.person.dob}" id="calNewPtDob"  navigator="true" pattern="dd/MM/yyyy" >
-                        </p:calendar>
+
+                        <h:panelGrid columns="4">
+                            <p:inputText autocomplete="off"  id="year"  
+                                         value="#{patientController.yearMonthDay.year}" 
+                                         style="width: 50px; ">
+                                <f:ajax event="keyup" execute="@this month day" render="calNewPtDob" 
+
+                                        listener="#{patientController.dateChangeListen()}"  />
+                            </p:inputText>
+                            <p:inputText autocomplete="off" id="month"
+                                         style="width: 50px; " value="#{patientController.yearMonthDay.month}">
+                                <f:ajax event="keyup" execute="@this year day" render="calNewPtDob" listener="#{billController.dateChangeListen()}"  />
+                            </p:inputText>
+                            <p:inputText autocomplete="off" id="day" 
+                                         style="width: 50px;" value="#{patientController.yearMonthDay.day}">
+                                <f:ajax event="keyup" execute="@this year month" render="calNewPtDob" listener="#{billController.dateChangeListen()}" />
+                            </p:inputText>
+                            <p:calendar  value="#{patientController.current.person.dob}" 
+                                         id="calNewPtDob"  navigator="true" pattern="dd/MM/yyyy" 
+                                         style="width: 100px!important;"
+                                         styleClass="shortinput">
+                                <f:ajax event="dateSelect" />
+                            </p:calendar>
+                        </h:panelGrid>
 
                         <p:commandButton value="Save" action="#{patientController.saveSelected()}" ajax="false" onclick="if (!confirm('Are you sure you want to save this record?'))
-                                                return false;"></p:commandButton>
-                        
+                                    return false;"></p:commandButton>
+
                         <p:watermark value="Please enter the name of the Patient" for="txtNewPtName" />
                         <p:watermark value="Please enter the Phone" for="txtNewPtPhone" />
                         <p:watermark value="Please enter the Date of Birth" for="calNewPtDob" />
