--- a/src/main/webapp/reportCashier/report_cashier_summery_all_by_reciptno.xhtml
+++ b/src/main/webapp/reportCashier/report_cashier_summery_all_by_reciptno.xhtml
@@ -48,10 +48,10 @@
                     <h:panelGrid columns="5"  styleClass="noPrintButton">
 
                         <h:outputLabel value="From Date" />
-                        <p:inputText id="frn" value="#{commonReport.fromReciptNo}" />
+                        <p:inputText id="frn" value="#{commonReport.fromReciptNo}" autocomplete="off" />
                         <p:spacer width="30" height="1"/>
                         <h:outputLabel value="To Date"/>
-                        <p:inputText id="trn" value="#{commonReport.toReciptNo}" />
+                        <p:inputText id="trn" value="#{commonReport.toReciptNo}" autocomplete="off"/>
 
                         <p:watermark for="frn" value="From Recipt No" />
                         <p:watermark for="trn" value="To Recipt No" />
